--- a/project/projectnextgen.html
+++ b/project/projectnextgen.html
@@ -52,9 +52,9 @@
 				text-align:center;
 				width:100%;
 				height:325px;
-				background-image: url('bg2.png');
+				background-image: url('vietnam.png');
 				background-size: 100% 100%;	
-				margin-top:-7.52px;
+				margin-top:-7.5px;
 				cursor: context-menu;
 				}
 			#customers {
