--- a/project/projectnextgen.html
+++ b/project/projectnextgen.html
@@ -17,9 +17,14 @@
 		<style>
 			body {
 				margin:0;
-						
+				left:240px;		
 			}
-
+			#bgTxt{
+				position: absolute;
+				top:25%;
+				
+				color:#333333;
+			}
 			.icon-bar {
 				width: 100%;
 				background-color: #555;
@@ -51,7 +56,7 @@
 				position:relative;
 				text-align:center;
 				width:100%;
-				height:325px;
+				height:600px;
 				background-image: url('vietnam.png');
 				background-size: 100% 100%;	
 				margin-top:-7.5px;
@@ -113,7 +118,9 @@
 			  <a href="#contact">Contact</a>
 			  <a href="#about">About</a>
 			</div>
-			<div id="bg"></div>
+			<div id="bg">
+				<div class="container"><h1 id="bgTxt">Vietnam country guide</h1><h2 id="bgTxt">Where you can find guide and tips travelling to vietnam</h2></div>
+			</div>
 			<div class="container">
 				<h1>Text</h1>
 				<h3>text</h3>
