--- a/project/projectnextgen.html
+++ b/project/projectnextgen.html
@@ -19,27 +19,19 @@
 				margin:0;
 				left:240px;		
 			}
-			#bgTxt{
-				position: absolute;
-				top:25%;
-				
-				color:#333333;
-			}
 			.icon-bar {
 				width: 100%;
 				background-color: #555;
 				overflow: auto;
 			}
 			.icon-bar a {
-				float: left;
-				width: 8%;
+				width: 11%;
 				text-align: center;
 				padding: 12px 0;
 				transition: all 0.3s ease;
 				color: white;
-				font-size: 36px;
+				font-size: 32px;
 				color: #f2f2f2;
-				text-align: center;
 				text-decoration: none;
 				font-size: 30px;
 			}
@@ -105,10 +97,13 @@
 		</head>
 		<body>
 			<div class="icon-bar ">
-			  <a class="active" href="#"><i class="fa fa-home"></i></a> 
-			  <a href="#news">News</a>
-			  <a href="#contact">Contact</a>
-			  <a href="#about">About</a>
+			  <a class="active" href="#" style="float: left;"><i class="fa fa-home"></i></a> 
+			  <a href="#hot" style="float: left;">Hottest</a>
+			  <a href="#new" style="float: left;">Newest</a>
+			  <a href="#recommended" style="float: left;">Recommend</a>
+			  <a href="#Mostliked" style="float: left;">Favourites</a>
+			  <a href="#contact" style="float: right;">Contact</a>
+			  <a href="#about" style="float: right;">About</a>
 			</div>
 			<div id="bg">
 				<div class="container"></div>
