--- a/project/projectnextgen.html
+++ b/project/projectnextgen.html
@@ -70,7 +70,7 @@
 				position:absolute;
 				color:blue;
 				text-transform: uppercase;
-				font-size:225%;
+				font-size:215%;
 				margin:0;
 				margin-left:5px;
 				cursor:pointer;
@@ -118,14 +118,14 @@
 					<h1 id="sectionTitle">Favourite Guide</h1>
 					<div id="post">
 						<img src="vietnam.png"></img>
-						<span id="postHeader">About Vietnam</span>
-						<span id="postContent">Hanoi is a great place to travel and have some fun times,bring your <br>friends and family to explore this place . . . .</span>
+						<span id="postHeader">Recommended places to travel</span>
+						<span id="postContent">Find out about the most favourites places travellers go across Vietnam,from <br>from north to south.</span>
 						<span  id="eI">Posted by Minh at 14/3/2018</span>
 					</div><hr>
 					<div id="post">
 						<img src="hanoi.png"></img>
-						<span id="postHeader">About Hanoi</span>
-						<span id="postContent">Hanoi is a great place to travel and have some fun times,bring your <br>friends and family to explore this place . . . .</span>
+						<span id="postHeader">Things to be bruoght with in Vietnam</span>
+						<span id="postContent">You can't travel to any country without any items in your backpack!In vietnam,these are the top things you need to bring.</span>
 						<span  id="eI">Posted by Minh at 14/3/2018</span>
 					</div><hr>
 				</div>
