--- a/project/projectnextgen-post1.html
+++ b/project/projectnextgen-post1.html
@@ -43,12 +43,12 @@
 				background-color: #4CAF50;
 			}
 			#display{
-				
-				height:600px;
+				margin-top:10px;
+				height:400px;
 				display: block;
 				margin-left: auto;
 				margin-right: auto;
-				width: 100%;
+				width: 50%;
 			}
 			.title{
 				font-size:45px
@@ -60,6 +60,7 @@
 			p{
 				font-size:30px;
 				text-indent:40px;
+				margin-top:75px;
 			}
 			<!-- form:
 				<p class="title"></p>
@@ -70,7 +71,7 @@
 		</head>
 		<body>
 			<div class="icon-bar ">
-			  <a class="active" href="#" style="float: left;"><i class="fa fa-home"></i></a> 
+			  <a class="active" href="projectnextgen.html" style="float: left;"><i class="fa fa-home"></i></a> 
 			  <a href="#hot" style="float: left;">Hottest</a>
 			  <a href="#new" style="float: left;">Newest</a>
 			  <a href="#recommended" style="float: left;">Recommend</a>
@@ -85,40 +86,40 @@
 					<img id="display"src="backpack.png">
 					<p>Considering all the walking and traveling you will be doing, a thick-strapped backpack is necessary to carry all of your belongings, like a change of clothes, a water bottle, sunscreen and snacks for the day. Plus, if you make any purchases along the way, they can be stored safely in your pack instead of in plastic bags that would otherwise get in the way.</p>
 					<p class="title">2.A Travel Pillow</p>
-					<img id="display"src="backpack.png">
+					<img id="display"src="travelpillow.png">
 					<p>If you are planning on taking a number of trips around the country, prepare for hours upon hours of time spent on the road. These days, transport within Vietnam offers air-conditioning, but a travel pillow will aid you in getting that much needed shut-eye whilst in transit.</p>
 					<p class="title">3.Ear Plugs</p>
-					<img id="display"src="backpack.png">
+					<img id="display"src="earplugs.png">
 					<p>Light sleepers should bring a pair of ear plugs with them to get a full night of restful sleep. Very cheap and effective, they are a way to ward off distracting snorers in shared hostel rooms, as well as that wailing baby on that long bus journey across the country.</p>
 					<p class="title">4.A Quick-Dry Towel</p>
-					<img id="display"src="backpack.png">
+					<img id="display"src="quickdrytowel.png">
 					<p>Not all hostels or hotels will provide towels free of charge, so a super lightweight and non-bulky option might be a good idea. A quick dry towel is an essential item that can really enhance your traveling experience, whether it is drying off after getting caught in torrential rain during the monsoon season or covering yourself after a swim.</p>
 					<p class="title">5.Diarrhea Treatment</p>
-					<img id="display"src="backpack.png">
+					<img id="display"src="treatment.png">
 					<p>There’s no getting away from it, at some point during your travels, it is likely that you will be hit by a stomach bug from drinking non-bottled water or simply eating something you’re not used to. Although most symptoms will pass quite quickly, it might be worthwhile to bring along travel remedies to speed up the recovery process when you’re in areas far away from a drug store.</p>
 					<p class="title">6.Below-the-Knee Skirts or Trousers</p>
-					<img id="display"src="backpack.png">
+					<img id="display"src="trouser.png">
 					<p>If you would like to get access to pagodas and temples, modest below-the-knee clothing is a must. Despite the heat, local men and women dress quite conservatively, and you should be expected to do the same by covering your shoulders and legs, especially when visiting sacred places and government buildings. Avoid 100% cotton garments as you are likely to be too hot and uncomfortable – the perfect balance being a blend of Rayon and Polyester.</p>
 					<p class="title">7.Durable Shoes</p>
-					<img id="display"src="backpack.png">
+					<img id="display"src="shoes.png">
 					<p>If you’re planning on doing a lot of trekking or hiking on your trip, a pair of durable closed-toe shoes will ensure that your feet remain blister-free and protected from the elements. Alternatively, opt for a comfortable flat sandal as sneakers may not be too kind to your feet in the warm weather.</p>
 					<p class="title">8.Flip-Flops</p>
-					<img id="display"src="backpack.png">
+					<img id="display"src="flipflop.png">
 					<p>Alongside practical footwear, bring along a pair of flip-flops – or even better, purchase some once you’re there. Not only will these be easy to take off when visiting temples, certain bars and restaurants, but they will also allow your feet to breathe in the hot and humid weather. Avoid expensive footwear that might ‘walk away’ when you’re not looking.</p>
 					<p class="title">9.Travel Adapter</p>
-					<img id="display"src="backpack.png">
+					<img id="display"src="traveladapter.png">
 					<p>Thai sockets fit two plug types. However whilst your plug will work in Thailand, it is recommended you come prepared with a global adapter in case you have to travel through other countries.</p>
 					<p class="title">10.Portable Phone Charger</p>
-					<img id="display"src="backpack.png">
+					<img id="display"src="portablephonecharger.png">
 					<p>Pre-charged battery packs and portable phone chargers will save your life on that long bus or train ride. This is also essential if you plan on using your GPS a lot, meaning that your battery will burn down faster. After all, there’s nothing worse than being stranded in a place you don’t know.</p>
 					<p class="title">11.Sun Protection and a Hat</p>
-					<img id="display"src="backpack.png">
+					<img id="display"src="hat.png">
 					<p>During the monsoon season, it is wise to bring a light jacket to protect you from the rain that can come and go in a flash. Or do as the locals do and opt for a plastic poncho, especially useful if you are planning on cycling or riding a motorbike.</p>
 					<p class="title">12.Bug-Repellent</p>
-					<img id="display"src="backpack.png">
+					<img id="display"src="rep.png">
 					<p>Although malaria is rare and seldom found in most areas of Vietnam, Dengue fever can pose quite a problem – this is a viral infection that knows no bounds, with outbreaks in urban areas being quite common. Due to this, it is wise to carry a bottle of insect-repellent just in case. Try to remember to apply the mosquito repellent every morning before you head out for the day and to re-apply right before dusk.</p>
 					<p class="title">13.Tiger Balm or Cortisone Cream</p>
-					<img id="display"src="backpack.png">
+					<img id="display"src="balm.png">
 					<p>If you do happen to get bitten by mosquitoes, tiger balm or cortisone cream can prevent the bites from getting infected. Rub it over the affected area to reduce aches, swelling and other discomfort.</p>
 				
 				</h3>
