--- a/project/projectnextgen.html
+++ b/project/projectnextgen.html
@@ -16,7 +16,7 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 		<style>
 			body {
-				margin:0;
+				margin-top:5px;
 				left:240px;		
 				font-family:Times;
 			}
@@ -74,6 +74,7 @@
 				margin:0;
 				margin-left:5px;
 				cursor:pointer;
+				text-transform:none;
 			}
 			#post #postContent{
 				position:relative;
@@ -118,13 +119,13 @@
 					<h1 id="sectionTitle">Favourite Guide</h1>
 					<div id="post">
 						<img src="vietnam.png"></img>
-						<span id="postHeader">Recommended places to travel</span>
+						<a id="postHeader">Recommended places to travel</a>
 						<span id="postContent">Find out about the most favourites places travellers go across Vietnam,from <br>from north to south.</span>
 						<span  id="eI">Posted by Minh at 14/3/2018</span>
 					</div><hr>
 					<div id="post">
-						<img src="hanoi.png"></img>
-						<span id="postHeader">Things to be bruoght with in Vietnam</span>
+						<img src="hanoi.png" ></img>
+						<a id="postHeader" href="projectnextgen-post1.html">Things to be bought with in Vietnam</a>
 						<span id="postContent">You can't travel to any country without any items in your backpack!In vietnam,these are the top things you need to bring.</span>
 						<span  id="eI">Posted by Minh at 14/3/2018</span>
 					</div><hr>
