--- a/project/projectnextgen-post1.html
+++ b/project/projectnextgen-post1.html
@@ -80,7 +80,7 @@
 			  <a href="#about" style="float: right;">About</a>
 			</div>
 			<div class="container" style="cursor:context-menu;">
-				<h1 class="heading">About Vietnam-A beautiful place on earth!</h1>
+				<h1 class="heading">13 things you need to bring before going to Vietnam!</h1>
 				<h3><p>   Hundreds of thousands of people travel to experience the wonders of south-east Asia every single year, and understandably, Vietnam – the land of emerald waters, tropical islands and an exceptional history – is one of the top destinations in that part of the world. Although visitors may travel on a variety of budgets, trip durations and holidaying styles, here’s a list of essential items that should definitely be packed no matter what. Take a look at these 15 suggestions:</p>
 					<p class="title">1.Backpacks</p>
 					<img id="display"src="backpack.png">
