--- a/project/projectnextgen-post1.html
+++ b/project/projectnextgen-post1.html
@@ -44,11 +44,11 @@
 			}
 			#display{
 				margin-top:10px;
-				height:400px;
+				height:500px;
 				display: block;
 				margin-left: auto;
 				margin-right: auto;
-				width: 50%;
+				width: 75%;
 			}
 			.title{
 				font-size:45px
@@ -64,64 +64,62 @@
 			}
 			<!-- form:
 				<p class="title"></p>
-				<img id="display"src="backpack.png">
+				<img id="display"src="imgs/.jpg">
 				<p></p>
+				
 			-->
 		</style>
 		</head>
 		<body>
 			<div class="icon-bar ">
 			  <a class="active" href="projectnextgen.html" style="float: left;"><i class="fa fa-home"></i></a> 
-			  <a href="#hot" style="float: left;">Hottest</a>
 			  <a href="#new" style="float: left;">Newest</a>
-			  <a href="#recommended" style="float: left;">Recommend</a>
-			  <a href="#mostliked" style="float: left;">Favourites</a>
+			  <a href="#favourites" style="float: left;">Favourites</a>
+			  <a href="projectnextgen-more.html" style="float: left;">All guide</a>
 			  <a href="#contact" style="float: right;">Contact</a>
 			  <a href="#about" style="float: right;">About</a>
 			</div>
 			<div class="container" style="cursor:context-menu;">
-				<h1 class="heading">13 things you need to bring before going to Vietnam!</h1>
-				<h3><p>   Hundreds of thousands of people travel to experience the wonders of south-east Asia every single year, and understandably, Vietnam – the land of emerald waters, tropical islands and an exceptional history – is one of the top destinations in that part of the world. Although visitors may travel on a variety of budgets, trip durations and holidaying styles, here’s a list of essential items that should definitely be packed no matter what. Take a look at these 15 suggestions:</p>
-					<p class="title">1.Backpacks</p>
-					<img id="display"src="backpack.png">
-					<p>Considering all the walking and traveling you will be doing, a thick-strapped backpack is necessary to carry all of your belongings, like a change of clothes, a water bottle, sunscreen and snacks for the day. Plus, if you make any purchases along the way, they can be stored safely in your pack instead of in plastic bags that would otherwise get in the way.</p>
-					<p class="title">2.A Travel Pillow</p>
-					<img id="display"src="travelpillow.png">
-					<p>If you are planning on taking a number of trips around the country, prepare for hours upon hours of time spent on the road. These days, transport within Vietnam offers air-conditioning, but a travel pillow will aid you in getting that much needed shut-eye whilst in transit.</p>
-					<p class="title">3.Ear Plugs</p>
-					<img id="display"src="earplugs.png">
-					<p>Light sleepers should bring a pair of ear plugs with them to get a full night of restful sleep. Very cheap and effective, they are a way to ward off distracting snorers in shared hostel rooms, as well as that wailing baby on that long bus journey across the country.</p>
-					<p class="title">4.A Quick-Dry Towel</p>
-					<img id="display"src="quickdrytowel.png">
-					<p>Not all hostels or hotels will provide towels free of charge, so a super lightweight and non-bulky option might be a good idea. A quick dry towel is an essential item that can really enhance your traveling experience, whether it is drying off after getting caught in torrential rain during the monsoon season or covering yourself after a swim.</p>
-					<p class="title">5.Diarrhea Treatment</p>
-					<img id="display"src="treatment.png">
-					<p>There’s no getting away from it, at some point during your travels, it is likely that you will be hit by a stomach bug from drinking non-bottled water or simply eating something you’re not used to. Although most symptoms will pass quite quickly, it might be worthwhile to bring along travel remedies to speed up the recovery process when you’re in areas far away from a drug store.</p>
-					<p class="title">6.Below-the-Knee Skirts or Trousers</p>
-					<img id="display"src="trouser.png">
-					<p>If you would like to get access to pagodas and temples, modest below-the-knee clothing is a must. Despite the heat, local men and women dress quite conservatively, and you should be expected to do the same by covering your shoulders and legs, especially when visiting sacred places and government buildings. Avoid 100% cotton garments as you are likely to be too hot and uncomfortable – the perfect balance being a blend of Rayon and Polyester.</p>
-					<p class="title">7.Durable Shoes</p>
-					<img id="display"src="shoes.png">
-					<p>If you’re planning on doing a lot of trekking or hiking on your trip, a pair of durable closed-toe shoes will ensure that your feet remain blister-free and protected from the elements. Alternatively, opt for a comfortable flat sandal as sneakers may not be too kind to your feet in the warm weather.</p>
-					<p class="title">8.Flip-Flops</p>
-					<img id="display"src="flipflop.png">
-					<p>Alongside practical footwear, bring along a pair of flip-flops – or even better, purchase some once you’re there. Not only will these be easy to take off when visiting temples, certain bars and restaurants, but they will also allow your feet to breathe in the hot and humid weather. Avoid expensive footwear that might ‘walk away’ when you’re not looking.</p>
-					<p class="title">9.Travel Adapter</p>
-					<img id="display"src="traveladapter.png">
-					<p>Thai sockets fit two plug types. However whilst your plug will work in Thailand, it is recommended you come prepared with a global adapter in case you have to travel through other countries.</p>
-					<p class="title">10.Portable Phone Charger</p>
-					<img id="display"src="portablephonecharger.png">
-					<p>Pre-charged battery packs and portable phone chargers will save your life on that long bus or train ride. This is also essential if you plan on using your GPS a lot, meaning that your battery will burn down faster. After all, there’s nothing worse than being stranded in a place you don’t know.</p>
-					<p class="title">11.Sun Protection and a Hat</p>
-					<img id="display"src="hat.png">
-					<p>During the monsoon season, it is wise to bring a light jacket to protect you from the rain that can come and go in a flash. Or do as the locals do and opt for a plastic poncho, especially useful if you are planning on cycling or riding a motorbike.</p>
-					<p class="title">12.Bug-Repellent</p>
-					<img id="display"src="rep.png">
-					<p>Although malaria is rare and seldom found in most areas of Vietnam, Dengue fever can pose quite a problem – this is a viral infection that knows no bounds, with outbreaks in urban areas being quite common. Due to this, it is wise to carry a bottle of insect-repellent just in case. Try to remember to apply the mosquito repellent every morning before you head out for the day and to re-apply right before dusk.</p>
-					<p class="title">13.Tiger Balm or Cortisone Cream</p>
-					<img id="display"src="balm.png">
-					<p>If you do happen to get bitten by mosquitoes, tiger balm or cortisone cream can prevent the bites from getting infected. Rub it over the affected area to reduce aches, swelling and other discomfort.</p>
-				
+				<h1 class="heading">Recommeded places in vietnam.</h1>
+				<h3><p>We’d like to break down the 3 regions that make up the country – the North, Central, and South – and offer you the top attractions and cities to visit on your trip to Vietnam. Within each of these regions are small geographical regions and provinces, but will mainly focus on the larger 3. Each of these regions can be explored individually or as one packaged Vietnam holiday. So, let’s hop into Vietnam’s 3 great regions and the top things to do in each of them.</p>
+					<p class="title">1.Hanoi</p>
+					<img id="display"src="imgs/hanoi.webp">
+					<p>Capital of Vietnam, Hanoi is a stunning blended of tradition, culture, and modern metropolis. History buffs will love exploring the classical lanes of the Old Quarter and pagodas along Hoan Kiem Lake along the French and Chinese architecture. Compacted into a maze of scooter filled streets and loud street markets, Hanoi is a great place to immerse yourself in local culture, from delectable street food to stunning Water Puppet Shows. Those looking to relax can still enjoy the tranquility of Ngoc Son Temple, the Temple of Literature, and Tran Quoc Pagoda.</p>
+					<p class="title"></p>
+					<p class="title">2.Sapa</p>
+					<img id="display"src="imgs/sapa.jpg">
+					<p>Perfect for exploring the Northwest, the township of Sapa is a hikers paradise and gateway to the picturesque rice paddie fields and hillside villages of the region. Most Vietnam tour packages to the North include at least two days to hike Sapa, meet local villagers in Ta Van, and learn about the ethnic minorities of the region.</p>
+					<p class="title">3.Halong Bay</p>
+					<img id="display"src="imgs/halongbay.jpg">
+					<p>Probably the most famous attraction in Vietnam, Halong Bay is a world renowned World Heirtage site composed of karst islands, tranquil green waters, floating villages, and hidden caves. You can spend a week exploring its over 1,600 islands and 43,400 ha landscape and still not get tired of it. A Halong Bay cruise is a must for any visitor to Vietnam.</p>
+					<p class="title">4.Ninh Binh</p>
+					<img id="display"src="imgs/ninhbinh.jpg">
+					<p>Though it is sometimes overlooked on Vietnam tours, Ninh Binh is one of the many hidden gems of Vietnam. Located in the Red River Delta, this province houses the birthplace of Vietnam, the ancient capital of Hoa Lu, and Bai Dinh Temple, where the largest Buddha statue in Southeast Asia dwells. Alongside being an important historical site, Ninh Binh province is also home to Trang An Scenic Complex, a stunning array of rivers and mountains that was most recently featured in “Kong: Skull Island.”Here you can discover Tam Coc, or “three caves,” an enchanting collection of natural caves that can explore by small boats. Tam Coc is also known as “Halong Bay on land.”</p>
+					<p class="title">5.Danang</p>
+					<img id="display"src="imgs/danang.jpg">
+					<p>One of the gateways to Vietnam, Danang is usually only known for its international airport and the easy transfer to Hoi An, and that’s a shame. Evolving just as fast as Dubai, Danang has transformed from a rural and traditional township to a stunning, modern city with a variety of hotels, restaurants, and attractions.This is most notably seen in the Dragon Bridge, which is best visit at night when it shines. You can enjoy its any gorgeous forests, take a day trip to the towering Marble Mountains, or hike the tropical Ba Na Hills, but do not dismiss the beauty of this great city.</p>
+					<p class="title">6.Hoi An</p>
+					<img id="display"src="imgs/hoian.jpg">
+					<p>Known as the ancient town, Hoi An rests on the northern bank of the Thu Bon River, with any of the waterways running through the city as picturesque canals. With fishing and agriculture as the chief industries, you can commonly see boats navigating the canals with fresh food for markets. Peaceful, Hoi An is one of the best places to immerse yourself in Vietnamese culture, with numerous cultural tours to learn from local farmers and fisherman firsthand.You can also explore the local architecture and attractions, such as the Japanese Covered Bridge, Chinese Assembly Halls, and the Ancient Town itself. It is also the closest major city to My Son, but we’ll get to that a little later.</p>
+					<p class="title">7.Hue</p>
+					<img id="display"src="imgs/hue.jpg">
+					<p>Once the capital of the Nguyen Dynasty and Vietnam, Hue is just 3 hours from Hoi An and 2 hours from Danang. Resting on the Perfume River, Hue is similar to Hoi An in it’s rich historical heritage, housing Hue Citadel (site of the Imperial City), Thien Mu Pagoda, and the Minh Mang Tombs. Beyond the city, visitors can easily join a cruise along Perfume River to encounter the local craft villages in the region.Or, if you’re looking to escape to nature, head on over to Bach Ma National Park, which is home to thousands of rare fauna and flora.</p>
+					<p class="title">8.My Son</p>
+					<img id="display"src="imgs/myson.jpg">
+					<p>Another famous site in Vietnam, My Son Sanctuary is a UNESCO World Heritage Site composed of ancient Hindu temples built by the Champa kings. Set in a lush valley, the ruins are composed of roughly 20 structures of various architectural styles. A must see for any trip to Central Vietnam, a day trip from Hoi An can easily be arranged with a local guide to learn the historical and religious significance of the site
+					</p>
+					<p class="title">8.Da lat</p>
+					<img id="display"src="imgs/dalatr.jpg">
+					<p>Much further south is Da Lat, a inland city of cool weather, French-colonial architecture, and fruit farms. Concidered somewhat out of place compared to the more tropical and traditional regions of Vietnam, Da Lat is a popular vacation spot for domestic travelers, while being a perfect break for international tourists who are drained form the humidity.You can also enjoy a visit to Pongour Waterfall, a stunning cascade, or, if you are looking for something out of place on your trip, visit Hang Nga guesthouse, aka the Crazy House, designed by ipressionist Dang Viet Nga.</p>
+					<p class="title">9.Nha Trang</p>
+					<img id="display"src="imgs/nhatrang.jpg">
+					<p>Now, Vietnam is not all just majestic landscapes, historical cities, and cultural encounters – it’s also a great spot to relax by the beach. If you’re looking for a beachside vacation, than Nha Trang is the place to be. Home to multiple lovely beach resorts, Nha Trang is a laidback city perfect for relaxing in the and partying in the night.</p>
+					<p class="title">10.Ho Chi Minh</p>
+					<img id="display"src="imgs/hochiminh.jpg">
+					<p>Formerly known as Saigon, Ho Chi Minh City was named in honor of Ho Chi Minh, the late president of the Democratic Republic of Vietnam. Like it’s Northern neighbor Hanoi, Ho Chi Minh City is rich in traditional architecture and culture, but also leans more towards a modern metropolis, with the growing residential districts.Here you’ll encounter more Western-style buildings, such as the French-colonial Notre Dame Cathedral, the Saigon Opera House, and Reunification Palace, all must see spots in the city. It is also the gateway to two other key attractions in Vietnam.</p>
+					<p class="title">11.Phu Quoc</p>
+					<img id="display"src="imgs/phuquoc.webp">
+					<p>Lastly, we have Phu Quoc, a twin to Nha Trang at the very end of Vietnam. The largest island in Vietnam, Phu Quoc is the perfect end to your Vietnam trip, offering teh chance to relax at a lovely resort, kayak to secluded beaches, and enjoy a magical sunset.</p>
 				</h3>
 			</div>
 		</body>
