--- a/project/projectnextgen.html
+++ b/project/projectnextgen.html
@@ -16,13 +16,13 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 		<style>
 			body {
-				margin-top:5px;
+				margin:0;
 				left:240px;		
 				font-family:Times;
 			}
 			.icon-bar {
 				width: 100%;
-				background-color: #555;
+				background-color: grey;
 				overflow: auto;
 			}
 			.icon-bar a {
@@ -47,7 +47,7 @@
 				text-align:center;
 				width:100%;
 				height:600px;
-				background-image: url('vietnam.png');
+				background-image: url('imgs/vietnam.png');
 				background-size: 100% 100%;	
 				margin-top:-7.5px;
 				cursor: context-menu;
@@ -103,11 +103,10 @@
 		</head>
 		<body>
 			<div class="icon-bar ">
-			  <a class="active" href="#" style="float: left;"><i class="fa fa-home"></i></a> 
-			  <a href="#hot" style="float: left;">Hottest</a>
+			  <a class="active" href="projectnextgen.html" style="float: left;"><i class="fa fa-home"></i></a> 
 			  <a href="#new" style="float: left;">Newest</a>
-			  <a href="#recommended" style="float: left;">Recommend</a>
-			  <a href="#mostliked" style="float: left;">Favourites</a>
+			  <a href="#favourites" style="float: left;">Favourites</a>
+			  <a href="projectnextgen-more.html" style="float: left;">All guide</a>
 			  <a href="#contact" style="float: right;">Contact</a>
 			  <a href="#about" style="float: right;">About</a>
 			</div>
@@ -118,17 +117,19 @@
 				<div id="section">
 					<h1 id="sectionTitle">Favourite Guide</h1>
 					<div id="post">
-						<img src="vietnam.png"></img>
-						<a id="postHeader">Recommended places to travel</a>
+						<img src="imgs/vietnam.png"></img>
+						<a id="postHeader" href="projectnextgen-post1.html" style="text-decoration:none;">Recommended places to travel</a>
 						<span id="postContent">Find out about the most favourites places travellers go across Vietnam,from <br>from north to south.</span>
-						<span  id="eI">Posted by Minh at 14/3/2018</span>
+						<span  id="eI">Posted at 14/5/2018</span>
 					</div><hr>
 					<div id="post">
-						<img src="hanoi.png" ></img>
-						<a id="postHeader" href="projectnextgen-post1.html">Things to be bought with in Vietnam</a>
-						<span id="postContent">You can't travel to any country without any items in your backpack!In vietnam,these are the top things you need to bring.</span>
-						<span  id="eI">Posted by Minh at 14/3/2018</span>
+						<img src="imgs/hanoi.png" ></img>
+						<a id="postHeader" href="projectnextgen-post2.html" style="text-decoration:none;">Things to be bought with in Vietnam</a>
+						<span id="postContent">You can't travel to any country without any items in your backpack!In vietnam,<br>these are the top things you need to bring.</span>
+						<span  id="eI">Posted at 16/7/2018</span>
+						
 					</div><hr>
+					<a style="float:right" href="projectnextgen-more.html" >More...</a>
 				</div>
 		</body>
 				
