Tách js và css ra riêng 1 file cho tất cả các trang

--- a/project/projectnextgen-post1.html
+++ b/project/projectnextgen-post1.html
@@ -57,7 +57,7 @@
 				font-size:75px;
 				font-weight: 700;
 			}
-			p{
+			#title{
 				font-size:30px;
 				text-indent:40px;
 				margin-top:75px;
