--- a/project/projectnextgen-more.html
+++ b/project/projectnextgen-more.html
@@ -10,17 +10,17 @@
 			  <a class="active" href="projectnextgen.html" style="float: left;"><i class="fa fa-home"></i></a> 
 			 <a href="#new" style="float: left;">Newest</a>
 			  <a href="#favourites" style="float: left;">Favourites</a>
-			  <a href="projectnextgen-more.html" style="float: left;">All guide</a>
+			  <a href="projectnextgen-more.html" style="float: left;background-color:blue;">All guide</a>
 			  <a href="#contact" style="float: right;">Contact</a>
-			  <a href="#about" style="float: right;">About</a>
+			  <a href="projectnextgen-about.html" style="float: right;">About</a>
 			</div>
 			
 			<div class="container">
 				<div id="section">
 					<h1 id="sectionTitle">All Guide</h1>
-					<div id="post">
+					
 					</div>
-					<div id="post">
+					
 					</div>
 				</div>
 		</body>
