--- a/project/projectnextgen-post1.html
+++ b/project/projectnextgen-post1.html
@@ -13,7 +13,7 @@
 			  <a href="#favourites" style="float: left;">Favourites</a>
 			  <a href="projectnextgen-more.html" style="float: left;">All guide</a>
 			  <a href="#contact" style="float: right;">Contact</a>
-			  <a href="#about" style="float: right;">About</a>
+			  <a href="projectnextgen-about.html" style="float: right;">About</a>
 			</div>
 			<div class="container" style="cursor:context-menu;">
 				<h1 class="heading">Recommeded places in vietnam.</h1>
@@ -21,7 +21,7 @@
 					<p class="title">1.Hanoi</p>
 					<img id="display"src="imgs/hanoi.webp">
 					<p>Capital of Vietnam, Hanoi is a stunning blended of tradition, culture, and modern metropolis. History buffs will love exploring the classical lanes of the Old Quarter and pagodas along Hoan Kiem Lake along the French and Chinese architecture. Compacted into a maze of scooter filled streets and loud street markets, Hanoi is a great place to immerse yourself in local culture, from delectable street food to stunning Water Puppet Shows. Those looking to relax can still enjoy the tranquility of Ngoc Son Temple, the Temple of Literature, and Tran Quoc Pagoda.</p>
-					<p class="title"></p>
+					
 					<p class="title">2.Sapa</p>
 					<img id="display"src="imgs/sapa.jpg">
 					<p>Perfect for exploring the Northwest, the township of Sapa is a hikers paradise and gateway to the picturesque rice paddie fields and hillside villages of the region. Most Vietnam tour packages to the North include at least two days to hike Sapa, meet local villagers in Ta Van, and learn about the ethnic minorities of the region.</p>
