--- a/project/projectnextgen.html
+++ b/project/projectnextgen.html
@@ -13,11 +13,9 @@
 			  <a href="#favourites" style="float: left;">Favourites</a>
 			  <a href="projectnextgen-more.html" style="float: left;">All guide</a>
 			  <a href="#contact" style="float: right;">Contact</a>
-			  <a href="#about" style="float: right;">About</a>
+			  <a href="projectnextgen-about.html" style="float: right;">About</a>
 			</div>
-			<div id="bg">
-				<div class="container"></div>
-			</div>
+			<div id="bg"></div>
 			<div class="container">
 				<div id="section">
 					<h1 id="sectionTitle">Favourite Guide</h1>
