--- a/project/projectnextgen-post2.html
+++ b/project/projectnextgen-post2.html
@@ -12,7 +12,7 @@
 			  <a href="#favourites" style="float: left;">Favourites</a>
 			  <a href="projectnextgen-more.html" style="float: left;">All guide</a>
 			  <a href="#contact" style="float: right;">Contact</a>
-			  <a href="#about" style="float: right;">About</a>
+			  <a href="projectnextgen-about.html" style="float: right;">About</a>
 			</div>
 			<div class="container" style="cursor:context-menu;">
 				<h1 class="heading">13 things you need to bring before going to Vietnam!</h1>
