--- a/project/projectnextgen-post3.html
+++ b/project/projectnextgen-post3.html
@@ -34,8 +34,8 @@
 				<p>Use this to apologise when you bump into someone, or when you need to get by someone. No need to say it to everyone if the area is crowded, though, because there’s no such thing as personal space in Vietnam. To get the attention of a server in a restaurant, shout out ‘Em ơi!’ (Em oy!) No need to be shy. It’s normal to shout for your server in Vietnam.</p>
 				<a class="title">Tôi không hiểu. (toy comb hey-oo) / I don’t understand</a>
 				<p>Fairly self-explanatory, but add a shrug just in case. One common gesture you’ll see a lot is somebody twisting their hand in the air – almost like they’re changing a light bulb. This means they either can’t help you, or they can’t understand you. And if somebody doesn’t understand you, don’t expect them to hang around waiting for you to repeat it a bunch of times. They’ll usually get out of there quickly to avoid losing face.</p>
-				<a class="title">Pretty well everyone knows ‘bye bye’ – but you’ll get some easy smiles if you use this phrase.</a>
-				<p></p>
+				<a class="title">Hẹn gặp lại (hen gap lie) / See you again</a>
+				<p>Pretty well everyone knows ‘bye bye’ – but you’ll get some easy smiles if you use this phrase.</p>
 				<h1 class="heading">Directions</h1>
 				<a class="title">Nhà vệ sinh ở đâu? (nah vey sin uh dow) / Where is the bathroom?</a>
 				<p>Ever used a bum gun before? It’s the way of life in Vietnam, and once you’re familiar with it, you’ll wonder how you ever lived without one. In most of the touristy areas, a simple ‘Toilet?’ will do.</p>
@@ -59,6 +59,11 @@
 				<h1 class="heading">At the market</h1>
 				<a class="title">Bao nhiêu? (bow nyew) / How much?</a>
 				<p>To use this phrase, just point to the object (with an open hand, palm facing down) and ask. Pronounce the ‘bow’ like you would for the Japanese show of respect.</p>
+				<a class="title">Mắc quá (mack wha) / Too expensive!</a>
+				<p>Always assume you’re being overcharged in markets. Two-thirds of their starting price is usually a good rule of thumb for where to meet them. If they won’t budge, just walk away and see what happens.</p>
+				<h1 class="heading">number</h1>
+				
+				<p>These are the basic numbers from 1-10.Vietnamese uses number frequently to address the quantity of the product that we want to get when we are buying something<br>Không (comb) / 0<br>Một (mote) / 1<br>Hai (hi) / 2<br>Ba (ba) / 3<br>Bốn (bone) / 4<br>Năm (num) / 5<br>Sáu (saow) / 6<br>Bảy (by) / 7<br>Tám (tam) / 8<br>Chín (chin) / 9<br>Mười (muy) / 10</p>
 				
 				</h3>
 			</div>
