--- a/project/projectnextgen-more.html
+++ b/project/projectnextgen-more.html
@@ -17,7 +17,7 @@
 			
 			<div class="container">
 				<div id="section">
-					<h1 id="sectionTitle">All Guide</h1>
+					<h1 id="sectionTitle">All Guides</h1>
 					
 					</div>
 					
