--- a/Next-Gen_VietNam-master/project/projectnextgen-post1.html
+++ b/Next-Gen_VietNam-master/project/projectnextgen-post1.html
@@ -8,7 +8,7 @@
 		</head>
 		<body>
 			<div class="icon-bar ">
-			  <a class="active" href="projectnextgen.html" style="float: left;"><i class="fa fa-home"></i></a> 
+			  <a class="active" href="index.html" style="float: left;"><i class="fa fa-home"></i></a> 
 			  <a href="#new" style="float: left;">Newest</a>
 			  <a href="#favourites" style="float: left;">Favourites</a>
 			  <a href="projectnextgen-more.html" style="float: left;">All guide</a>
