--- a/project/projectnextgen-post1.html
+++ b/project/projectnextgen-post1.html
@@ -17,7 +17,8 @@
 			</div>
 			<div class="container" style="cursor:context-menu;">
 				<h1 class="heading">Recommeded places in vietnam.</h1>
-				<h3><p>We’d like to break down the 3 regions that make up the country – the North, Central, and South – and offer you the top attractions and cities to visit on your trip to Vietnam. Within each of these regions are small geographical regions and provinces, but will mainly focus on the larger 3. Each of these regions can be explored individually or as one packaged Vietnam holiday. So, let’s hop into Vietnam’s 3 great regions and the top things to do in each of them.</p>
+				<h3>
+				<p>We’d like to break down the 3 regions that make up the country – the North, Central, and South – and offer you the top attractions and cities to visit on your trip to Vietnam. Within each of these regions are small geographical regions and provinces, but will mainly focus on the larger 3. Each of these regions can be explored individually or as one packaged Vietnam holiday. So, let’s hop into Vietnam’s 3 great regions and the top things to do in each of them.</p>
 					<p class="title">1.Hanoi</p>
 					<img id="display"src="imgs/hanoi.webp">
 					<p>Capital of Vietnam, Hanoi is a stunning blended of tradition, culture, and modern metropolis. History buffs will love exploring the classical lanes of the Old Quarter and pagodas along Hoan Kiem Lake along the French and Chinese architecture. Compacted into a maze of scooter filled streets and loud street markets, Hanoi is a great place to immerse yourself in local culture, from delectable street food to stunning Water Puppet Shows. Those looking to relax can still enjoy the tranquility of Ngoc Son Temple, the Temple of Literature, and Tran Quoc Pagoda.</p>
@@ -56,6 +57,7 @@
 					<p class="title">11.Phu Quoc</p>
 					<img id="display"src="imgs/phuquoc.webp">
 					<p>Lastly, we have Phu Quoc, a twin to Nha Trang at the very end of Vietnam. The largest island in Vietnam, Phu Quoc is the perfect end to your Vietnam trip, offering teh chance to relax at a lovely resort, kayak to secluded beaches, and enjoy a magical sunset.</p>
+				<a href="https://theculturetrip.com" style="float:right;">source:theculturetrip.com</a><hr>
 				</h3>
 			</div>
 		</body>
