--- a/Next-Gen_VietNam-master/project/projectnextgen-post1.html
+++ b/Next-Gen_VietNam-master/project/projectnextgen-post1.html
@@ -60,6 +60,9 @@
 				<a href="https://theculturetrip.com" style="float:right;">source:theculturetrip.com</a><hr>
 				</h3>
 			</div>
+			<div id="sidePostSection">
+					
+			</div>
 		</body>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
