--- a/Next-Gen_VietNam-master/project/index.html
+++ b/Next-Gen_VietNam-master/project/index.html
@@ -6,6 +6,13 @@
 		<link rel="stylesheet" type="text/css" href="projectnextgencss.css">
 		<meta charset="utf-8"/>	
 		</head>
+		<style>
+		.container{
+			position:relative;
+			margin: 0 auto;
+			width: 80%;
+		}
+		</style>
 		<body>
 			<div class="icon-bar ">
 			  <a class="active" href="index.html" style="float: left;"><i class="fa fa-home"></i></a> 
