--- a/Next-Gen_VietNam-master/project/projectnextgen-post2.html
+++ b/Next-Gen_VietNam-master/project/projectnextgen-post2.html
@@ -5,6 +5,14 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">	
 		<link rel="stylesheet" type="text/css" href="projectnextgencss.css">
 		</head>
+		<style>
+			.container {
+				max-width: 925px;
+				left:250px;
+				position:absolute;
+				border-right:1px solid	#DCDCDC;
+			}
+		</style>
 		<body>
 			<div class="icon-bar ">
 			  <a class="active" href="index.html" style="float: left;"><i class="fa fa-home"></i></a> 
