--- a/Next-Gen_VietNam-master/project/projectnextgen-post3.html
+++ b/Next-Gen_VietNam-master/project/projectnextgen-post3.html
@@ -10,6 +10,14 @@
 				<p></p>
 				
 		-->
+		<style>
+			.container {
+				max-width: 925px;
+				left:250px;
+				position:absolute;
+				border-right:1px solid	#DCDCDC;
+			}
+		</style>
 		</head>
 		<body>
 			<div class="icon-bar ">
