--- a/Next-Gen_VietNam-master/project/projectnextgen-about.html
+++ b/Next-Gen_VietNam-master/project/projectnextgen-about.html
@@ -6,6 +6,14 @@
 		<link rel="stylesheet" type="text/css" href="projectnextgencss.css">
 		<meta charset="utf-8"/>	
 		</head>
+		<style>
+			.container {
+				max-width: 925px;
+				left:250px;
+				position:absolute;
+				border-right:1px solid	#DCDCDC;
+			}
+		</style>
 		<body>
 			<div class="icon-bar ">
 			  <a class="active" href="index.html" style="float: left;"><i class="fa fa-home"></i></a> 
