--- a/Next-Gen_VietNam-master/project/projectnextgen-more.html
+++ b/Next-Gen_VietNam-master/project/projectnextgen-more.html
@@ -5,6 +5,15 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">	
 		<link rel="stylesheet" type="text/css" href="projectnextgencss.css">
 		</head>
+		
+		<style>
+		.container{
+			position:relative;
+			margin: 0 auto;
+			width: 80%;
+		}
+		</style>
+		
 		<body>
 			<div class="icon-bar ">
 			  <a class="active" href="index.html" style="float: left;"><i class="fa fa-home"></i></a> 
