--- a/Next-Gen_VietNam-master/project/projectnextgen-post1.html
+++ b/Next-Gen_VietNam-master/project/projectnextgen-post1.html
@@ -4,7 +4,14 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">	
 		<link rel="stylesheet" type="text/css" href="projectnextgencss.css">
-		
+		<style>
+			.container {
+				max-width: 925px;
+				left:250px;
+				position:absolute;
+				border-right:1px solid	#DCDCDC;
+			}
+		</style>
 		</head>
 		<body>
 			<div class="icon-bar ">
@@ -60,8 +67,9 @@
 				<a href="https://theculturetrip.com" style="float:right;">source:theculturetrip.com</a><hr>
 				</h3>
 			</div>
+			
 			<div id="sidePostSection">
-					
+					<div style="font-size:30px;float:left;border-bottom:1px solid red;">You may also like:</div>
 			</div>
 		</body>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
